# beatboxer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
beatboxer/: __init__.py  beatboxer.py  default_oneshots.py  gui.py
